--- a/index.html
+++ b/index.html
@@ -4,22 +4,60 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#7014e8">
 
-  <title>Document</title>
+  <title>وب‌سایت ادیب امینی</title>
 
-  <link rel="stylesheet" href="/style.css?v=">
-  <link rel="stylesheet" href="/medium-device.css?v=" media="(min-width:634px)">
-  <link rel="stylesheet" href="/large-device.css?v=" media="(min-width:1200px)">
+  <link rel="stylesheet" href="/styles/main.css?v=">
+  <link rel="stylesheet" href="/styles/medium-device.css?v=" media="(min-width:512px)">
+  <!-- <link rel="stylesheet" href="/styles/large-device.css?v=" media="(min-width:1200px)"> -->
+  <link rel="stylesheet" href="/styles/animations.css?v=">
 
-	<link rel="icon" type="image/png" href="/images/favicon.png?v=">
+	<!-- <link rel="icon" type="image/png" href="/images/favicon.png?v=">
 	<link rel="apple-touch-icon" sizes="48x48" href="/images/favicon.png?v=">
 	<link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.png?v=">
-	<link rel="apple-touch-icon" sizes="96x96" href="/images/favicon.png?v=">
+	<link rel="apple-touch-icon" sizes="96x96" href="/images/favicon.png?v="> -->
 </head>
 <body>
 
-  Hello World!
+  <main class="main">
+    <section class="main-container">
+      <h1 class="main-heading">
+        یه <i>پروژۀ طراحی</i> تو ذهنت داری؟<br>
+        برای شروع روی این دکمه کلیک کن 👇
+      </h1>
+      <a class="button big-button" href="https://wa.me/989907350441" target="_blank">
+        پیام در واتساپ
+        <div class="hitbox"></div>
+      </a>
+      <div class="or-divider">
+        <span class="or-divider-label">یا</span>
+      </div>
+      <div class="button-bar">
+        <div class="button-container">
+          <a class="button small-button" href="tel:09907350441">
+            تماس بگیر
+            <div class="hitbox"></div>
+          </a>
+          <div class="button-tooltip" dir="ltr">
+            0990 735 0441
+          </div>
+        </div>
+        <div class="space-box"></div>
+        <div class="button-container">
+          <a class="button small-button" href="mailto:adibaminiq@gmail.com">
+            ایمیل بفرست
+            <div class="hitbox"></div>
+          </a>
+          <div class="button-tooltip" dir="ltr">
+            adibaminiq@gmail.com
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <script src="/scripts/main.js?v="></script>
   
 </body>
 </html>
