--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#7014e8">
 
-  <title>وب‌سایت ادیب امینی</title>
+  <title>وب‌سایت ادیب امینی - طراح رابط کاربری</title>
 
   <link rel="stylesheet" href="/styles/main.css?v=">
   <link rel="stylesheet" href="/styles/medium-device.css?v=" media="(min-width:512px)">
