--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
   <title>وب‌سایت ادیب امینی - طراح رابط کاربری</title>
 
-  <link rel="stylesheet" href="/styles/main.css?v=">
-  <link rel="stylesheet" href="/styles/medium-device.css?v=" media="(min-width:512px)">
-  <!-- <link rel="stylesheet" href="/styles/large-device.css?v=" media="(min-width:1200px)"> -->
-  <link rel="stylesheet" href="/styles/animations.css?v=">
+  <link rel="stylesheet" href="/styles/main.css?v=2">
+  <link rel="stylesheet" href="/styles/medium-device.css?v=2" media="(min-width:512px)">
+  <!-- <link rel="stylesheet" href="/styles/large-device.css?v=2" media="(min-width:1200px)"> -->
+  <link rel="stylesheet" href="/styles/animations.css?v=2">
 
-	<!-- <link rel="icon" type="image/png" href="/images/favicon.png?v=">
-	<link rel="apple-touch-icon" sizes="48x48" href="/images/favicon.png?v=">
-	<link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.png?v=">
-	<link rel="apple-touch-icon" sizes="96x96" href="/images/favicon.png?v="> -->
+	<!-- <link rel="icon" type="image/png" href="/images/favicon.png?v=2">
+	<link rel="apple-touch-icon" sizes="48x48" href="/images/favicon.png?v=2">
+	<link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.png?v=2">
+	<link rel="apple-touch-icon" sizes="96x96" href="/images/favicon.png?v=2"> -->
 </head>
 <body>
 
@@ -57,7 +57,7 @@
     </section>
   </main>
 
-  <script src="/scripts/main.js?v="></script>
+  <script src="/scripts/main.js?v=2"></script>
   
 </body>
 </html>
